--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "@angular/router": "^14.2.0",
     "@apollo/client": "^3.0.0",
     "@capacitor/android": "^4.5.0",
+    "@capacitor/camera": "^4.1.4",
     "@capacitor/core": "^4.5.0",
     "@capacitor/ios": "^4.5.0",
     "@capacitor/preferences": "^4.0.2",
@@ -32,12 +33,14 @@
     "ably": "^1.2.33",
     "angular-font-awesome": "^3.1.2",
     "apollo-angular": "^4.1.0",
+    "base64-arraybuffer": "^1.0.2",
     "bootstrap": "^5.2.2",
     "font-awesome": "^4.7.0",
     "graphql": "^16",
     "jwt-decode": "^3.1.2",
     "rxjs": "~7.5.0",
     "tslib": "^2.3.0",
+    "uuid": "^9.0.0",
     "zone.js": "~0.11.4"
   },
   "devDependencies": {
@@ -52,6 +55,7 @@
     "karma-coverage": "~2.2.0",
     "karma-jasmine": "~5.1.0",
     "karma-jasmine-html-reporter": "~2.0.0",
-    "typescript": "~4.7.2"
+    "typescript": "~4.7.2",
+    "@types/uuid": "^9.0.0"
   }
 }
