--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "font-awesome": "^4.7.0",
     "graphql": "^16",
     "jwt-decode": "^3.1.2",
+    "ng-image-fullscreen-view": "^3.0.3",
     "rxjs": "~7.5.0",
     "tslib": "^2.3.0",
     "uuid": "^9.0.0",
@@ -49,13 +50,13 @@
     "@angular/compiler-cli": "^14.2.0",
     "@capacitor/cli": "^4.5.0",
     "@types/jasmine": "~4.0.0",
+    "@types/uuid": "^9.0.0",
     "jasmine-core": "~4.3.0",
     "karma": "~6.4.0",
     "karma-chrome-launcher": "~3.1.0",
     "karma-coverage": "~2.2.0",
     "karma-jasmine": "~5.1.0",
     "karma-jasmine-html-reporter": "~2.0.0",
-    "typescript": "~4.7.2",
-    "@types/uuid": "^9.0.0"
+    "typescript": "~4.7.2"
   }
 }
