--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "@capacitor/android": "^4.5.0",
     "@capacitor/camera": "^4.1.4",
     "@capacitor/core": "^4.5.0",
+    "@capacitor/dialog": "^4.1.0",
     "@capacitor/ios": "^4.5.0",
     "@capacitor/preferences": "^4.0.2",
     "@fortawesome/free-solid-svg-icons": "^6.2.0",
